--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,56 +1,36 @@
 {
   "name": "aptpay-frontend",
   "version": "1.0.0",
-  "description": "APTpay Cross-Border Payroll Frontend",
+  "description": "APTpay Cross-Border Payroll & Treasury Platform Frontend",
   "private": true,
   "dependencies": {
-    "@aptos-labs/ts-sdk": "^1.0.0",
-    "@aptos-labs/wallet-adapter-core": "^2.0.0",
-    "@aptos-labs/wallet-adapter-react": "^1.0.0",
-    "@aptos-labs/wallet-adapter-ant-design": "^1.0.0",
-    "@reduxjs/toolkit": "^1.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "react-redux": "^8.0.0",
-    "react-hook-form": "^7.43.0",
-    "react-query": "^3.39.0",
-    "antd": "^5.0.0",
-    "styled-components": "^5.3.0",
-    "recharts": "^2.5.0",
-    "ethers": "^6.0.0",
-    "date-fns": "^2.29.0",
-    "axios": "^1.3.0",
-    "web3": "^1.8.0"
-  },
-  "devDependencies": {
+    "@aptos-labs/ts-sdk": "^1.25.0",
+    "@aptos-labs/wallet-adapter-ant-design": "^3.0.0",
+    "@aptos-labs/wallet-adapter-react": "^3.0.0",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.33.0",
-    "eslint-plugin-react": "^7.32.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "^4.9.0",
-    "vite": "^4.1.0",
-    "vite-plugin-eslint": "^1.8.0"
+    "antd": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.0.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.0.0",
+    "recharts": "^2.8.0",
+    "axios": "^1.6.0",
+    "moment": "^2.29.0"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint src --ext ts,tsx --fix",
-    "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "@typescript-eslint/recommended"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -64,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^29.0.0"
   }
 }
